# VMFT-LAD

./: .gitignore  README.md
VMFT_LAD/: env.py.example  pyproject.toml  run_vmft_lad.ipynb
VMFT_LAD/evaluation/: eval_criteria.py  eval_vmft_lad.ipynb  execution-cost-eval.ipynb  fpr_vs_fb_period_vs_window_sizes.csv  list-vs-maxheap.ipynb  llm_abalation_study.ipynb  ram-profiler.py  roc.ipynb  tpr_vs_fb_period_vs_window_sizes.csv  window_size-vs-TP.ipynb
VMFT_LAD/evaluation/results/buffer-io/Cyrax7B/: criteria2.csv
VMFT_LAD/evaluation/results/buffer-io/EmertonMonarch7B/: criteria1.csv  criteria2.csv
VMFT_LAD/heap_providers/: ListProvider.py
VMFT_LAD/log_inference_providers/: FakeLogInferenceProvider.py  NullLogInferenceProvider.py
VMFT_LAD/log_inference_providers/BartLarge/: BartLargeZeroShot.ipynb  BartLargeZeroShotLogInference.py  Bart_Large_zero_shot_out.csv  FastBartLargeZeroShotLogInference.py
VMFT_LAD/log_inference_providers/Cyrax7B/: Cyrax_7B_out.csv  FastCyrax7BFewShotLogInference.py
VMFT_LAD/log_inference_providers/EmertonMonarch7B/: EmertonMonarch_7B_out.csv  FastEmertonMonarch7BFewShotLogInference.py
VMFT_LAD/log_inference_providers/Falcon7B/: Falcon7BFewShotLogInference.py  Falcon_7B_out.csv
VMFT_LAD/log_inference_providers/GPT3/: FastGPT3FewShotLogInference.py  GPT3FewShot.ipynb  GPT3_few_shot_out.csv  gpt3_out_raw.csv
VMFT_LAD/tests/: benign-test.ipynb  hdd-test.ipynb
VMFT_LAD/tests/test_data/: benign.csv
VMFT_LAD/vmft_lad/: BaseDetector.py  ILogInferenceProvider.py  IMaxHeapProvider.py  Subsequence.py
VMFT_LAD_Online/: main.py  (+3 more)
(+9582 files in other folders)
